feat(frontend): Implementar tela principal do frontend

--- a/static/css/variables.css
+++ b/static/css/variables.css
@@ -1,4 +1,6 @@
 :root {
-    --primary-color: #2E86DE;
-    --secondary-color: #2467AB;
+    --primary-color: #08A6C9;
+    --secondary-color: #045263;
+
+    --background-color: #BCDCEA;
 }
