--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,25 +1,84 @@
 @import "variables.css";
 
-.header {
-    background-color: var(--primary-color);
-}
 
 body {
-    background-color: #EEEEEE;
+    background-color: #FFF;
 }
 
-main {
-    background-color: #FFF;
-    padding: 1.5em;
+footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    line-height: 60px;
+    background-color: #f5f5f5;
+}
 
-    margin: 0 2em;
-    margin-bottom: 3em;
+table {
+    font-family: "Lato", sans-serif;
+}
 
-    height: 100vh;
+table thead {
+    font-family: "Montserrat", sans-serif;
+}
 
-    border-radius: 2em;
-    border-top-left-radius: 0;
-    border-top-right-radius: 0;
+.section--status {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
-    box-shadow: 0px 3px 3px #66666633;
+.section--status p {
+    font-family: "Lato", sans-serif;
+    margin: 0;
+}
+
+.td-service-status {
+    display: flex;
+}
+
+.service-status {
+    border-radius: 3px;
+    padding: .35em 1em;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    font-size: .75em;
+
+    background-color: #EEE;
+    color: #444;
+
+    margin: 0 .5em;
+}
+
+.section--status i {
+    margin-right: 1em;
+}
+
+.service-status--success i {
+    margin-right: 1em;
+}
+
+.service-status--warning i {
+    margin-right: 1em;
+}
+
+.service-status--error i {
+    margin-right: 1em;
+}
+
+.service-status--success {
+    background-color: #28a745;
+    color: #FFF;
+}
+
+.service-status--warning {
+    background-color: #ffc107;
+    color: #FFF;
+}
+
+.service-status--error {
+    background-color: #dc3545;
+    color: #FFF;
 }
