--- a/templates/base.html
+++ b/templates/base.html
@@ -11,24 +11,30 @@
     </title>
 
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:600,700|Open+Sans:400,600&display=swap" rel="stylesheet">
-
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:600,700|Lato:400&display=swap">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }} ">
-    
+
     {% block head %}
     {% endblock %}
 
 </head>
 
 <body>
+    <!-- Scripts -->
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script type="text/javascript" src="{{ url_for ('static', filename='js/main.js') }}"></script>
 
     {% block body %}
     {% endblock %}
 
-    <script type="text/javascript" src="{{ url_for ('static', filename='js/main.js') }}">
-    </script>
-    <!-- Scripts -->
+    <footer class="text-muted">
+        <div class="container">
 
-    </body>
+        </div>
+    </footer>
+</body>
 
 </html>
