--- a/status_page/static/css/style.css
+++ b/status_page/static/css/style.css
@@ -26,6 +26,12 @@ table thead {
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
+}
+
+.section--status span {
+    width: 100%;
+    padding: 0.25em;
 }
 
 .section--status p {
@@ -66,6 +72,12 @@ table thead {
 
 .service-status--error i {
     margin-right: 1em;
+}
+
+.service-status--circle {
+    border-radius: 50%;
+    padding: 0;
+    margin: 0;
 }
 
 .service-status--success {
