--- a/status_page/templates/components/_header.html
+++ b/status_page/templates/components/_header.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">{{ header_title }}</a>
+    <a class="navbar-brand" href="/">{{ header_title }}</a>
 </nav>
 
 <style>
